syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message User {
  int64 ID = 1;
  string email = 2;
  string name = 3;
  string last_name = 4;
  google.protobuf.Timestamp password_changed_at = 5;
  google.protobuf.Timestamp created_at = 6;
}